# LiqFit

./: .gitignore  README.md  pyproject.toml
notebooks/: train_emotions_classifier.ipynb
src/liqfit/collators/: __init__.py  base_collator.py  nli_collator.py
src/liqfit/datasets/: __init__.py  nli_dataset.py  transform.py
src/liqfit/losses/: __init__.py  losses.py
src/liqfit/modeling/: __init__.py  backbone.py  heads.py  model.py  pooling.py
src/liqfit/models/: __init__.py  deberta.py  t5.py
src/liqfit/pipeline/: __init__.py  inference.py
src/liqfit/utils/: __init__.py  metrics.py  standardization.py  transforms.py
tests/: test_losses.py  test_models.py  test_pipeline.py
