[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "liqfit"
version = "1.0.0"

requires-python = ">=3.7"

description = "Flexible Few-shot learning tool."
license = "MIT"
long_description = "file: README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "kornia",
    "transformers",
    "accelerate",
]


[options]
packages = "./src/liqfit"
zip_safe = "True"


[tool.black]
line-length = 80
target-version = ['py37']